[project]
name = "pii-compliance-auditor"
version = "1.0.0"
description = "OpenEnv environment for PII compliance auditing"
requires-python = ">=3.11"
dependencies = [
    "openenv",
    "fastmcp",
    "fastapi",
    "uvicorn[standard]",
    "openai",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"